# rust-typing-test

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
assets/: top500_words.txt
data/: results.json
src/: app.rs  main.rs
src/core/: history.rs  mod.rs  settings.rs  storage.rs  test.rs  weak_words.rs  words.rs
src/screens/: history.rs  menu.rs  mod.rs  options.rs  test.rs
