[package]
name = "rust-typing-test"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.29"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
wasm-logger = "0.2.0"
web-sys = "0.3.83"
